fucked reforge complete (add integration game moved to management integration games , new resultStateContainer , and all case removed from solution)

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -35,8 +35,7 @@
                             <li>
                                 <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementGames}}</a>
                                 <ul class="d-menu" data-role="dropdown">
-                                    <li><a href="#/newGameManagement">{{translation.AddGame}}</a></li>
-                                    <li><a href="#/managementIntegrationGames">{{translation.GamesEdition}}</a></li>
+                                    <li><a href="#/managementIntegrationGames">{{translation.ManagementGames}}</a></li>
                                     <li><a href="#/editGameFeatures">{{translation.ManagementIntegrationGameFeatures}}</a></li>
                                 </ul>
                             </li>
@@ -48,11 +47,6 @@
                                 </ul>
                             </li>
                             <li>
-                                <!--<a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementLanguages}}</a>
-                                <ul class="d-menu" data-role="dropdown">
-                                    <li><a href="#/addLanguage">{{translation.AddLanguage}}</a></li>
-                                    <li><a href="#/managementLanguages">{{translation.ManagementLanguages}}</a></li>
-                                </ul>-->
                                 <a href="#/managementLanguages">{{translation.ManagementLanguages}}</a>
                             </li>
                             <li>
