--- a/WebBellwether.Web/app/languages/managementLanguages.html
+++ b/WebBellwether.Web/app/languages/managementLanguages.html
@@ -2,9 +2,9 @@
     <div class="margin20">
         <h1 ng-hide="newLanguageOption == true">{{translation.ManagementLanguages}}</h1>
         <h2 ng-hide="newLanguageOption == false">{{translation.AddLanguage}}</h2>
-        <a ng-click="newLanguageDialog()" style="text-decoration: none;color:crimson" href=""><span class="mif-undo mif-2x mif-ani-shuttle"></span>Zmień</a>
+        <a ng-click="newLanguageDialog()" style="text-decoration: none; color: crimson" href=""><span class="mif-undo mif-2x mif-ani-shuttle"></span>Zmień</a>
     </div>
-
+    
     <!--EDIT LANGUAGE BASIC VALUE-->
     <div class="row">
         <div class="col-xs-10 col-sm-4 col-md-4 col-md-offset-4 col-xs-offset-1 col-sm-offset-4 formAni" ng-hide="newLanguageOption == true">
@@ -15,7 +15,7 @@
                 </select>
             </div>
 
-            <div class="formAni" style="margin-top:20px;margin-bottom:20px" ng-hide="languageForEdit == null || newLanguageOption == true">
+            <div class="formAni" style="margin-top: 20px; margin-bottom: 20px" ng-hide="languageForEdit == null || newLanguageOption == true">
                 <form name="basicLanguageInformationEdit">
                     <div class="form-group">
                         <label>{{translation.LanguageName}}</label>
@@ -24,9 +24,20 @@
 
                     <div class="form-group">
                         <label>{{translation.LanguageShortName}}</label>
-                        <input class="form-control myFormColor" required ng-model="languageForEdit.languageShortName" type="text">
-                        <div class="margin10">
-                            Uwaga musi być odpowiednio skonfigurowane gdyz jest używane jako klucz w obcych serwisach
+                        <select class="form-control myFormColor" required ng-model="languageForEdit.languageShortName" data-ng-options="sl.code as sl.language for sl in supportedLanguages">
+                            <option value=''>{{translation.ChooseLanguage}}</option>
+                        </select>
+                        <div class="margin10" style="text-align: left;font-weight: bold" >
+                            <span style="color: crimson">{{translation.Warning}}</span>
+                            {{translation.WrongLanguageCodeConfiguration}}
+                            <div>
+                                {{translation.CurrentlyUserService}}
+                                <span style="color: #337ab7">{{translateServiceName}}</span>
+                            </div>
+                            <div>
+                                {{translation.CodeForLanguage}}{{languageForEdit.languageName}} :
+                                <span style="color: crimson">{{languageForEdit.languageShortName}}</span>    
+                            </div>
                         </div>
                     </div>
 
@@ -42,7 +53,7 @@
                     </div>
 
                     <!--PUBLISH LANGUAGE-->
-                    <div class="form-inline" style="text-align:left">
+                    <div class="form-inline" style="text-align: left">
                         <label>{{translation.PublishLanguage}}</label>
                         <label class="input-control checkbox">
                             <input data-ng-model="languageForEdit.isPublic" ng-change="publishLanguage(languageForEdit)" type="checkbox">
@@ -52,17 +63,17 @@
                     </div>
                 </form>
                 <!--SEARCH-->
-                <label style="margin-top:40px">{{translation.Search}}</label>
+                <label style="margin-top: 40px">{{translation.Search}}</label>
                 <div class="input-control text" data-role="input">
                     <input class="form-control myFormColor" type="text" ng-model="searchImput" uib-typeahead="sS for sS in searchSource | filter:$viewValue | limitTo:8">
-                    <button style="background-color:transparent;color:white" class="myFormColor button helper-button clear"><span class="mif-cross"></span></button>
+                    <button style="background-color: transparent; color: white" class="myFormColor button helper-button clear"><span class="mif-cross"></span></button>
                 </div>
             </div>
         </div>
 
         <!--NEW LANGUAGE BASIC VALUE-->
         <div class="col-xs-10 col-sm-4 col-md-4 col-md-offset-4 col-xs-offset-1 col-sm-offset-4 formAni" ng-hide="newLanguageOption == false">
-            <div style="margin-top:20px;margin-bottom:20px">
+            <div style="margin-top: 20px; margin-bottom: 20px">
                 <form name="basicLanguageInformationNew">
                     <div class="form-group">
                         <label>{{translation.LanguageName}}</label>
@@ -71,7 +82,21 @@
 
                     <div class="form-group">
                         <label>{{translation.LanguageShortName}}</label>
-                        <input class="form-control myFormColor" required ng-model="newLanguage.languageShortName" type="text">
+                        <select class="form-control myFormColor" required ng-model="newLanguage.languageShortName" data-ng-options="sl.code as sl.language for sl in supportedLanguages">
+                            <option value=''>{{translation.ChooseLanguage}}</option>
+                        </select>
+                        <div class="margin10" style="text-align: left;font-weight: bold">
+                            <span style="color: crimson">{{translation.Warning}}</span>
+                            {{translation.WrongLanguageCodeConfiguration}}
+                            <div>
+                                {{translation.CurrentlyUserService}}
+                                <span style="color: #337ab7">{{translateServiceName}}</span>
+                            </div>
+                            <div>
+                                {{translation.CodeForLanguage}}{{newLanguage.languageName}} :
+                                <span style="color: crimson">{{newLanguage.languageShortName}}</span>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -91,7 +116,7 @@
         <div class="row myFormColorWithBorder" ng-repeat-start="slc in selectedLanguageContent | filter:searchImput | startFrom:currentPage*pageSize | limitTo:pageSize" ng-class-odd="'alt'" ng-class="{selectedTransparentWithBorder_hover : hover || activeLanguageKey == slc.key }" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
             <div class="col-md-9 col-md-push-3">
                 <div class="margin10">
-                    <input type="text" class="form-control myFormColorImput" required ng-model="slc.value" />
+                    <input type="text" class="form-control myFormColorImput" required ng-model="slc.value"/>
                 </div>
             </div>
             <div class="col-md-3 col-md-pull-9" ng-click="setActiveLanguageKey(slc)">
@@ -113,7 +138,7 @@
                         {{translation.MainLanguageTranslation}}
                     </div>
                     <!--HERE I TAKE TRANSLATION FOR MAIN LANGUAGE-->
-                    <div class="block" style="font-weight:bold;">
+                    <div class="block" style="font-weight: bold;">
                         {{translation[slc.key]}}
                     </div>
                 </div>
@@ -140,15 +165,15 @@
     </div>
 
     <!--DIALOG-->
-        <div data-role="dialog" id="deleteDialog" class="text-center dialog alert" data-windows-style="true" data-close-button="true" data-type="alert">
-            <h1 style="text-align:left">{{translation.RemovingLanguage}} {{languageForEdit.languageName}}</h1>
-            <div class="text-center margin10">
-                {{translation.RemovingLanguageDialog}}
-            </div>
-            <div>
-                <button class="btn btn-warning" ng-click="deleteLanguage(languageForEdit)" ng-disabled="languageForEdit == ''"><span class="mif-minus"> {{translation.Delete}}</span></button>
-            </div>
-            <span class="dialog-close-button"></span>
+    <div data-role="dialog" id="deleteDialog" class="text-center dialog alert" data-windows-style="true" data-close-button="true" data-type="alert">
+        <h1 style="text-align: left">{{translation.RemovingLanguage}} {{languageForEdit.languageName}}</h1>
+        <div class="text-center margin10">
+            {{translation.RemovingLanguageDialog}}
         </div>
+        <div>
+            <button class="btn btn-warning" ng-click="deleteLanguage(languageForEdit)" ng-disabled="languageForEdit == ''"><span class="mif-minus"> {{translation.Delete}}</span></button>
+        </div>
+        <span class="dialog-close-button"></span>
+    </div>
 </div>
 
